// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--text testClass1 testClass2"
  />
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize compressed is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text euiButtonGroup--compressed"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize m is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize s is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color danger is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--danger"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--danger euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--danger euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--danger euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color ghost is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--ghost"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--ghost euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--ghost euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--ghost euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color primary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--primary"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--primary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--primary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--primary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color secondary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--secondary"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--secondary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--secondary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--secondary euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color text is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color warning is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--warning"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--warning euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--warning euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--warning euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props idSelected is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--fill euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--selected"
    >
      <input
        checked=""
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isDisabled is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text euiButtonGroup--disabled"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--disabled euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        disabled=""
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--disabled euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        disabled=""
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--disabled euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        disabled=""
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isFullWidth is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset euiButtonGroup__fieldset--fullWidth"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text euiButtonGroup--fullWidth"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isIconOnly is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__toggle--iconOnly euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--iconOnly"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__toggle--iconOnly euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--iconOnly"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButtonGroup__toggle--iconOnly euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--iconOnly"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiScreenReaderOnly"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props legend is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props name is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        name="name"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        name="name"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        name="name"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props options are rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button01"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button01"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </label>
    </div>
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
    >
      <input
        class="euiButtonGroup__input"
        id="button02"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button02"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props options can pass down data-test-subj 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <div
      class="euiButton euiButton--no-hover euiButtonGroup__toggle euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
      data-test-subj="test"
    >
      <input
        class="euiButtonGroup__input"
        data-test-subj="test"
        id="button00"
        type="radio"
      />
      <label
        class="euiButton__content euiButtonGroup__label"
        for="button00"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi idToSelectedMap is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <button
      aria-pressed="true"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--selected euiButton--fill"
      id="button00"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover euiButtonGroup__button--selected euiButton--fill"
      id="button01"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
      id="button02"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    class="euiButtonGroup euiButtonGroup--text"
  >
    <button
      aria-pressed="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
      id="button00"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
      id="button01"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButton euiButton--text euiButton--small euiButtonGroup__button euiButton--no-hover"
      id="button02"
      type="button"
    >
      <span
        class="euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
